syntax = "proto3";
package oprc;


option java_multiple_files = true;
option java_package = "org.hpcclab.oaas.proto";

service DataService {
  rpc Get (SingleObjectRequest) returns (ObjectResponse);
  rpc GetValue (SingleKeyRequest) returns (ValueResponse);
  rpc Delete (SingleObjectRequest) returns (EmptyResponse);
  rpc Set (SetObjectRequest) returns (EmptyResponse);
  rpc SetValue (SetKeyRequest) returns (EmptyResponse);
  rpc Merge (SetObjectRequest) returns (ObjectResponse);
  rpc Stats (StatsRequest) returns (StatsResponse);
  rpc Capabilities (CapabilitiesRequest) returns (CapabilitiesResponse);
  
  // Granular storage APIs (gated by ODGM_ENABLE_GRANULAR_STORAGE)
  rpc DeleteValue (SingleKeyRequest) returns (EmptyResponse);
  rpc BatchSetValues (BatchSetValuesRequest) returns (EmptyResponse);
  rpc ListValues (ListValuesRequest) returns (stream ValueEnvelope);
}
message EmptyResponse {

}

message StatsRequest {
}


message StatsResponse {
  repeated ShardStats shards = 1;
}

message ShardStats {
  string collection = 1;
  uint32 partition_id = 2;
  uint64 shard_id = 3;
  uint64 count = 4;
}

// Capability discovery (Phase 5)
message CapabilitiesRequest {}
message CapabilitiesResponse {
  bool string_ids = 1;
  bool string_entry_keys = 2;
  bool granular_entry_storage = 3; // reserved for future
  bool event_pipeline_v2 = 4;      // per-entry event pipeline available
}

message ValueResponse {
  // Existing single entry value (legacy field, preserved for backward compatibility)
  ValData value = 1;
  // Added for granular entry storage upgrade (optional so older clients ignore):
  // Monotonic object version (incremented per batch mutation). Only set when granular storage enabled.
  optional uint64 object_version = 2; // NEW
  // Echo of the key in string form (helps clients canonicalize; numeric keys are decimal strings like "42")
  optional string key = 3;            // NEW
  // Indicates the entry is a tombstone (distinct from not found). Not set if entry does not exist.
  optional bool deleted = 4;          // NEW (future use)
}

message ObjectResponse {
  ObjData obj = 1;
}


message ObjData {
  optional ObjMeta metadata = 1;
  // uint64 last_updated = 3;
  optional ObjectEvent event = 3;
  map<string, ValData> entries = 4;
}

message ObjectEvent {
  map<string, FuncTrigger> func_trigger = 1;
  map<string, DataTrigger> data_trigger = 3;
}

message FuncTrigger {
  repeated TriggerTarget on_complete = 1;
  repeated TriggerTarget on_error = 2;
}

message DataTrigger {
  repeated TriggerTarget on_create = 1;
  repeated TriggerTarget on_update = 2;
  repeated TriggerTarget on_delete = 3;  
}

message TriggerTarget {
  string cls_id = 1;
  uint32 partition_id = 2;
  optional string object_id = 6;
  string fn_id = 4;
  map<string, string> req_options = 5;
}

// Event triggering system payload structures
message TriggerPayload {
  EventInfo event_info = 1;
  optional bytes original_payload = 3;
}

message EventInfo {
  // Source object information
  string source_cls_id = 1;
  uint32 source_partition_id = 2;
  // String-based object identifier
  optional string source_object_id = 9;
  
  // Event type and details
  EventType event_type = 4;
  optional string fn_id = 5;  // For function events
  optional string key = 6;    // For data events
  
  // Timing information
  uint64 timestamp = 7;
  
  // Additional context
  map<string, string> context = 8;
}

enum EventType {
  EVENT_TYPE_UNKNOWN = 0;
  // Function events
  EVENT_TYPE_FUNC_COMPLETE = 1;
  EVENT_TYPE_FUNC_ERROR = 2;
  // Data events  
  EVENT_TYPE_DATA_CREATE = 3;
  EVENT_TYPE_DATA_UPDATE = 4;
  EVENT_TYPE_DATA_DELETE = 5;
}

enum TriggerType {
  TRIGGER_TYPE_UNKNOWN = 0;
  TRIGGER_TYPE_FUNCTION = 1;
  TRIGGER_TYPE_DATA = 2;
}


message ObjMeta {
  string cls_id = 1;
  uint32 partition_id = 2;
  optional string object_id = 4;
}

message ValData {
  bytes data = 1;
  ValType type = 2;
}

enum ValType {
  VAL_TYPE_BYTE = 0;
  VAL_TYPE_CRDT_MAP = 1;
  // VAL_TYPE_UNKNOWN = 2;
}


message SingleObjectRequest {
  string cls_id = 1;
  uint32 partition_id = 2;
  optional string object_id = 4;
}

message SingleKeyRequest {
  string cls_id = 1;
  uint32 partition_id = 2;
  optional string key = 5;
  optional string object_id = 6;
}


message SetKeyRequest {
  string cls_id = 1;
  int32 partition_id = 2;
  ValData value = 5;
  optional string key = 6;
  optional string object_id = 7;
}

message SetObjectRequest {
  string cls_id = 1;
  int32 partition_id = 2;
  ObjData object = 4;
  optional string object_id = 5;
}

// Granular storage batch mutation request
message BatchSetValuesRequest {
  // Object identity
  string cls_id = 1;
  uint32 partition_id = 2;
  optional string object_id = 4;
  
  // Values to set/update atomically. Key is string.
  // Empty value with delete marker can be used for tombstones, or simply omit from map to delete.
  map<string, ValData> values = 5;
  
  // Optional set of keys to explicitly delete (tombstone). Useful when you want to delete without setting.
  repeated string delete_keys = 6;
  
  // Optional CAS (compare-and-swap): if set and current object_version != expected, returns ABORTED
  optional uint64 expected_object_version = 7;
}

// Request to list/enumerate values in an object
message ListValuesRequest {
  // Object identity
  string cls_id = 1;
  uint32 partition_id = 2;
  optional string object_id = 4;
  
  // Optional key prefix filter (e.g., "user:" to match "user:123", "user:abc")
  optional string key_prefix = 5;
  
  // Maximum entries to return (server may cap at configured limit)
  uint32 limit = 6;
  
  // Opaque pagination cursor (returned from previous response; omit for first page)
  optional bytes cursor = 7;
}

// Single value envelope in a list/stream response
message ValueEnvelope {
  // Entry key (string representation; numeric keys are decimal strings like "42")
  string key = 1;
  
  // Value data (may be omitted if this is a tombstone)
  optional ValData value = 2;
  
  // Object version at which this entry was last mutated
  uint64 version = 3;
  
  // Optional: opaque cursor for resuming iteration after this entry
  optional bytes next_cursor = 4;
}

message CreateCollectionRequest{
  string name = 1;
  int32 partition_count = 2;
  int32 replica_count = 3;
  repeated ShardAssignment shard_assignments = 4;
  string shard_type = 6;
  map<string, string> options = 7;
  optional InvocationRoute invocations = 8;
}

// ShardAssignment represents the assignment of shards to nodes in a single paritition.
message ShardAssignment {
  // primary is the shard ID of primary replica
  optional uint64 primary = 1;
  // Node IDs of the replicas
  repeated uint64 replica = 2;
  // Shard IDs for each replica
  repeated uint64 shard_ids = 3;
}

message InvocationRoute{
  map<string,FuncInvokeRoute> fn_routes = 1;
  repeated string disabled_fn = 2;
}

message FuncInvokeRoute {
  string url =1;
  bool stateless = 2;
  bool standby = 3;
  repeated uint64 active_group = 4;
}


message CreateCollectionResponse {
  string name = 1;
}


message ShardGroup {
  repeated uint64 shard_ids = 1;
}
